RESOLVED FIXED213821
Several key event tests in fast/events/ios are failing after <rdar://problem/62197116>
https://bugs.webkit.org/show_bug.cgi?id=213821
Summary Several key event tests in fast/events/ios are failing after <rdar://problem/...
Wenson Hsieh
Reported 2020-06-30 16:39:30 PDT
Attachments
Patch (3.43 KB, patch)
2020-06-30 17:44 PDT, Wenson Hsieh
no flags
Fix non-internal build (4.74 KB, patch)
2020-06-30 18:06 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2020-06-30 16:40:50 PDT
These seem to include: - fast/events/ios/key-events-comprehensive/key-events-control.html - fast/events/ios/key-events-comprehensive/key-events-meta-control.html - fast/events/ios/key-events-comprehensive/key-events-control-shift.html - fast/events/ios/keydown-keyup-special-keys-in-non-editable-element.html - fast/events/ios/type-digits-holding-control-key.html
Wenson Hsieh
Comment 2 2020-06-30 17:44:35 PDT
Wenson Hsieh
Comment 3 2020-06-30 18:06:59 PDT
Created attachment 403256 [details] Fix non-internal build
EWS
Comment 4 2020-06-30 19:35:51 PDT
Committed r263784: <https://trac.webkit.org/changeset/263784> All reviewed patches have been landed. Closing bug and clearing flags on attachment 403256 [details].
Note You need to log in before you can comment on or make changes to this bug.